cabal-version:      2.4
name:               contractmodel
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Maximilian Algehed
maintainer:         maximilian.algehed@quviq.com

-- A copyright notice.
-- copyright:
-- category:

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFunctor
    DeriveDataTypeable
    StandaloneDeriving
    ImportQualifiedPost
    TupleSections
    LambdaCase
    PatternSynonyms
    GADTs
    TypeApplications
    ScopedTypeVariables
    TypeFamilies
    FlexibleContexts
    FlexibleInstances
    MultiParamTypeClasses
    RankNTypes
    GeneralizedNewtypeDeriving
    TemplateHaskell

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
    import: lang
    hs-source-dirs: src
    exposed-modules:
      Test.QuickCheck.ContractModel
      Test.QuickCheck.ContractModel.Internal
      Test.QuickCheck.ContractModel.Internal.Common
      Test.QuickCheck.ContractModel.Internal.ChainIndex
      Test.QuickCheck.ContractModel.Internal.Spec
      Test.QuickCheck.ContractModel.Symbolics
    -- General dependencies
    build-depends:
      base >=4.7 && <5,
      containers,
      lens,
      mtl,
      uniplate
    -- QuickCheck dependencies
    build-depends:
      QuickCheck -any,
      quickcheck-dynamic >= 2.0.0,
      quickcheck-dynamic-iosim
    -- IOSim dependencies
    build-depends:
      io-classes,
      io-sim
    -- Plutus and Cardano dependencies
    build-depends:
      plutus-ledger-api,
      plutus-tx,
      cardano-api
