cabal-version:      2.4
name:               contractmodel
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Maximilian Algehed
maintainer:         maximilian.algehed@quviq.com

-- A copyright notice.
-- copyright:
-- category:

common lang
  default-language:   Haskell2010
  default-extensions:
    RecordWildCards
    ViewPatterns
    DeriveFunctor
    DeriveDataTypeable
    StandaloneDeriving
    ImportQualifiedPost
    TupleSections
    LambdaCase
    PatternSynonyms
    GADTs
    TypeApplications
    ScopedTypeVariables
    TypeFamilies
    FlexibleContexts
    FlexibleInstances
    MultiParamTypeClasses
    RankNTypes
    GeneralizedNewtypeDeriving
    PolyKinds
    TemplateHaskell
    DataKinds
    DefaultSignatures
    ConstraintKinds
    DeriveGeneric
    DerivingVia
    TypeOperators

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wno-name-shadowing
    -Wno-orphans -Wno-redundant-constraints

library
    import: lang
    hs-source-dirs: src
    exposed-modules:
      Test.QuickCheck.ContractModel
      Test.QuickCheck.ContractModel.DL
      Test.QuickCheck.ContractModel.Internal
      Test.QuickCheck.ContractModel.Internal.Model
      Test.QuickCheck.ContractModel.Internal.Common
      Test.QuickCheck.ContractModel.Internal.ChainIndex
      Test.QuickCheck.ContractModel.Internal.Spec
      Test.QuickCheck.ContractModel.Internal.Symbolics
      Test.QuickCheck.ContractModel.Internal.Utils
    -- General dependencies
    build-depends:
      base >=4.7 && <5,
      containers,
      lens,
      mtl,
    -- QuickCheck dependencies
    build-depends:
      QuickCheck -any,
      quickcheck-dynamic >= 2.0.0,
    -- Plutus and Cardano dependencies
    build-depends:
      plutus-ledger-api,
      plutus-tx,
      cardano-api >= 1.35,
      cardano-ledger-core,
      cardano-ledger-shelley
